Replace optional Lucene VTI finalizer cleanup with a Cleaner-based fallback while preserving explicit close semantics, add Java 21 modernization documentation, and introduce a source audit script for legacy JVM-era constructs.